 * Added limit image upload size by number of pixels (Thomas Elliott)
 * Added `manage.py wagtail_update_index` alias to avoid clashes with `update_index` commands from other packages (Matt Westcott)
 * Renamed `target_model` argument on `PageChooserBlock` to `page_type` (Loic Teixeira)
 * Fix: Set `SERVER_PORT` to 443 in `Page.dummy_request()` for HTTPS sites (Sergey Fedoseev)
 * Fix: Include port number in `Host` header of `Page.dummy_request()` (Sergey Fedoseev)
 * Fix: Validation error messages in `InlinePanel` no longer count towards `max_num` when disabling the 'add' button (Todd Dembrey, Thibaud Colas)
 * Fix: Rich text to contentstate conversion now ignores stray closing tags (frmdstryr)
 * Fix: Escape backslashes in `postgres_search` queries (Hammy Goonan)
 * Fix: Parent page link in page chooser search results no longer navigates away (Asanka Lihiniyagoda, Sævar Öfjörð Magnússon)
 * Fix: `routablepageurl` tag now correctly omits domain part when multiple sites exist at the same root (Gassan Gousseinov)
 * Fix: Added missing collection column specifier on document listing template (Sergey Fedoseev)
 * Fix: Page Copy will now also copy ParentalManyToMany field relations (LB (Ben Johnston))
 * Fix: Admin HTML header now includes correct language code (Matt Westcott)
 * Fix: Unclear error message when saving image after focal point edit (Hugo van den Berg)


2.4 (19.12.2018)
~~~~~~~~~~~~~~~~

 * Added support for Python 3.7 (Matt Westcott)
 * Added `max_count` option on page models to limit the number of pages of a particular type that can be created (Dan Braghis)
 * Document and image choosers now show the document / image's collection (Alejandro Garza, Janneke Janssen)
 * Added new "Welcome to your Wagtail site" Starter Page when using wagtail start command (Timothy Allen, Scott Cranfill)
 * Added ability to run individual tests through tox (Benjamin Bach)
 * Collection listings are now ordered by name (Seb Brown)