@@ -1,0 +1,43 @@
+# Generated by Django 2.1.3 on 2018-11-14 15:25
+
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('modeladmintest', '0005_book_cover_image'),
+    ]
+
+    operations = [
+        migrations.CreateModel(
+            name='Contributor',
+            fields=[
+                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
+                ('first_name', models.CharField(max_length=255)),
+                ('last_name', models.CharField(max_length=255)),
+                ('phone_number', models.CharField(max_length=255)),
+                ('address', models.CharField(max_length=255)),
+            ],
+        ),
+        migrations.CreateModel(
+            name='Person',
+            fields=[
+                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
+                ('first_name', models.CharField(max_length=255)),
+                ('last_name', models.CharField(max_length=255)),
+                ('phone_number', models.CharField(max_length=255)),
+                ('address', models.CharField(max_length=255)),
+            ],
+        ),
+        migrations.CreateModel(
+            name='Visitor',
+            fields=[
+                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
+                ('first_name', models.CharField(max_length=255)),
+                ('last_name', models.CharField(max_length=255)),
+                ('phone_number', models.CharField(max_length=255)),
+                ('address', models.CharField(max_length=255)),
+            ],
+        ),
+    ]
