@@ -1,10 +1,11 @@
+from wagtail.admin.edit_handlers import FieldPanel, ObjectList, TabbedInterface
 from wagtail.contrib.modeladmin.options import (
     ModelAdmin, ModelAdminGroup, ThumbnailMixin, modeladmin_register)
 from wagtail.contrib.modeladmin.views import CreateView
 from wagtail.tests.testapp.models import BusinessChild, EventPage, SingleEventPage
 
 from .forms import PublisherModelAdminForm
-from .models import Author, Book, Publisher, Token, VenuePage
+from .models import Author, Book, Contributor, Friend, Person, Publisher, Token, VenuePage, Visitor
 
 
 class AuthorModelAdmin(ModelAdmin):
@@ -91,6 +92,37 @@ class VenuePageAdmin(ModelAdmin):
     exclude_from_explorer = True
 
 
+class PersonAdmin(ModelAdmin):
+    model = Person
+
+
+class FriendAdmin(ModelAdmin):
+    model = Friend
+
+
+class VisitorAdmin(ModelAdmin):
+    model = Visitor
+
+    panels = [
+        FieldPanel('last_name'),
+        FieldPanel('phone_number'),
+        FieldPanel('address'),
+    ]
+    edit_handler = TabbedInterface([
+        ObjectList(panels),
+    ])
+
+
+class ContributorAdmin(ModelAdmin):
+    model = Contributor
+
+    panels = [
+        FieldPanel('last_name'),
+        FieldPanel('phone_number'),
+        FieldPanel('address'),
+    ]
+
+
 class EventsAdminGroup(ModelAdminGroup):
     menu_label = "Events"
     items = (EventPageAdmin, SingleEventPageAdmin, VenuePageAdmin)
@@ -109,3 +141,7 @@ modeladmin_register(TokenModelAdmin)
 modeladmin_register(PublisherModelAdmin)
 modeladmin_register(EventsAdminGroup)
 modeladmin_register(BusinessChildAdmin)
+modeladmin_register(PersonAdmin)
+modeladmin_register(FriendAdmin)
+modeladmin_register(VisitorAdmin)
+modeladmin_register(ContributorAdmin)
