@@ -14,6 +14,7 @@ Changelog
  * Added limit image upload size by number of pixels (Thomas Elliott)
  * Added `manage.py wagtail_update_index` alias to avoid clashes with `update_index` commands from other packages (Matt Westcott)
  * Renamed `target_model` argument on `PageChooserBlock` to `page_type` (Loic Teixeira)
+ * `edit_handler` and `panels` can now be defined on a `ModelAdmin` definition (Thomas Kremmel)
  * Fix: Set `SERVER_PORT` to 443 in `Page.dummy_request()` for HTTPS sites (Sergey Fedoseev)
  * Fix: Include port number in `Host` header of `Page.dummy_request()` (Sergey Fedoseev)
  * Fix: Validation error messages in `InlinePanel` no longer count towards `max_num` when disabling the 'add' button (Todd Dembrey, Thibaud Colas)
